Right clicking a sculpt brush in tool settings crashes Blender #128349

Closed
opened 2024-09-30 06:49:35 +02:00 by Alaska · 2 comments
Member

System Information
Operating system: macOS-14.6.1-arm64-arm-64bit 64 Bits
Graphics card: Metal API Apple M1 Pro 1.2

Blender Version
Broken: version: 4.3.0 Alpha, branch: main, commit date: 2024-09-30 03:40, hash: 9b8b03d8e6f1
Worked: 4.2 as it used a different system.

Short description of error
When right clicking on a sculpt brush in the asset popover in the tool settings, Blender will crash.

Traceback
Thread 0 Crashed::  Dispatch queue: com.apple.main-thread
0   Blender  0x1035b1700 WM_toolsystem_activate_brush_and_tool(bContext*, Paint*, Brush*) + 260
1   Blender  0x1042aa58c blender::ed::sculpt_paint::brush_asset_activate_exec(bContext*, wmOperator*) + 104
2   Blender  0x1035804c4 wm_operator_invoke(bContext*, wmOperatorType*, wmEvent const*, PointerRNA*, ReportList*, bool, bool) + 488
3   Blender  0x103580284 wm_operator_call_internal(bContext*, wmOperatorType*, PointerRNA*, ReportList*, wmOperatorCallContext, bool, wmEvent const*) + 488
4   Blender  0x10413ab54 blender::ed::asset::shelf::AssetViewItem::on_activate(bContext&) + 224
5   Blender  0x103cad470 ui_do_button(bContext*, uiBlock*, uiBut*, wmEvent const*) + 560
6   Blender  0x103caae60 ui_handle_button_event(bContext*, wmEvent const*, uiBut*) + 1304
7   Blender  0x103cac6fc ui_handle_menu_button(bContext*, wmEvent const*, uiPopupBlockHandle*) + 312
8   Blender  0x103caa660 ui_handle_menus_recursive(bContext*, wmEvent const*, uiPopupBlockHandle*, int, bool, bool, bool) + 6212
9   Blender  0x103ca6930 ui_handler_region_menu(bContext*, wmEvent const*, void*) + 184
10  Blender  0x10358491c wm_handlers_do_intern(bContext*, wmWindow*, wmEvent*, ListBase*) + 3560
11  Blender  0x1035835b0 wm_handlers_do(bContext*, wmEvent*, ListBase*) + 72
12  Blender  0x103582b44 wm_event_do_handlers(bContext*) + 2132
13  Blender  0x1035786c4 WM_main(bContext*) + 36
14  Blender  0x102c4fa34 main + 916
15  dyld     0x199a3b154 start + 2476
Video of issue

Exact steps for others to reproduce the error

  • Open Blender
  • With a mesh selected switch to sculpt mode
  • In the properties editor switch to the Tool tab
  • In the Tool tab click on the brush asset to open the asset browser, then right click on one of the options
  • Blender should crash

See attached video if instructions are unclear.

**System Information** Operating system: macOS-14.6.1-arm64-arm-64bit 64 Bits Graphics card: Metal API Apple M1 Pro 1.2 **Blender Version** Broken: version: 4.3.0 Alpha, branch: main, commit date: 2024-09-30 03:40, hash: `9b8b03d8e6f1` Worked: 4.2 as it used a different system. **Short description of error** When right clicking on a sculpt brush in the asset popover in the tool settings, Blender will crash. <details> <summary>Traceback</summary> ``` Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 Blender 0x1035b1700 WM_toolsystem_activate_brush_and_tool(bContext*, Paint*, Brush*) + 260 1 Blender 0x1042aa58c blender::ed::sculpt_paint::brush_asset_activate_exec(bContext*, wmOperator*) + 104 2 Blender 0x1035804c4 wm_operator_invoke(bContext*, wmOperatorType*, wmEvent const*, PointerRNA*, ReportList*, bool, bool) + 488 3 Blender 0x103580284 wm_operator_call_internal(bContext*, wmOperatorType*, PointerRNA*, ReportList*, wmOperatorCallContext, bool, wmEvent const*) + 488 4 Blender 0x10413ab54 blender::ed::asset::shelf::AssetViewItem::on_activate(bContext&) + 224 5 Blender 0x103cad470 ui_do_button(bContext*, uiBlock*, uiBut*, wmEvent const*) + 560 6 Blender 0x103caae60 ui_handle_button_event(bContext*, wmEvent const*, uiBut*) + 1304 7 Blender 0x103cac6fc ui_handle_menu_button(bContext*, wmEvent const*, uiPopupBlockHandle*) + 312 8 Blender 0x103caa660 ui_handle_menus_recursive(bContext*, wmEvent const*, uiPopupBlockHandle*, int, bool, bool, bool) + 6212 9 Blender 0x103ca6930 ui_handler_region_menu(bContext*, wmEvent const*, void*) + 184 10 Blender 0x10358491c wm_handlers_do_intern(bContext*, wmWindow*, wmEvent*, ListBase*) + 3560 11 Blender 0x1035835b0 wm_handlers_do(bContext*, wmEvent*, ListBase*) + 72 12 Blender 0x103582b44 wm_event_do_handlers(bContext*) + 2132 13 Blender 0x1035786c4 WM_main(bContext*) + 36 14 Blender 0x102c4fa34 main + 916 15 dyld 0x199a3b154 start + 2476 ``` </details> <details> <summary>Video of issue</summary> <video src="/attachments/b71c93d9-c928-42f1-bfa6-3e9722346afb" title="Right click brush asset crash.mp4" controls></video> </details> **Exact steps for others to reproduce the error** - Open Blender - With a mesh selected switch to sculpt mode - In the properties editor switch to the `Tool` tab - In the `Tool` tab click on the brush asset to open the asset browser, then right click on one of the options - Blender should crash See attached video if instructions are unclear.
Alaska added the
Severity
Normal
Type
Bug
Status
Needs Triage
labels 2024-09-30 06:49:36 +02:00
Member

yes, can confirm the crash

yes, can confirm the crash
Member
Added in a38c96b92ca28f30b062382c15cc77902615fc0d @JulianEisel
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-09-30 12:44:02 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Asset System
Module
Asset System
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#128349
No description provided.